Make sure the right item is operated on when changing startup type

The problem was the "current" item was sometime not the one you would
have expected when changing the startup type of item A:

  * it could be "none"
  * it could be the previous "current" item

The fix is a little hacky, but better than none.

BUG: 228795
FIXED-IN: 4.9.4